--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "node build/build.js && mv _redirects dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
